--- a/result.html
+++ b/result.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container" id="logo">
-        <a href="multi.html"><img src="logo.jpg"></a>
+        <a href="index.html"><img src="logo.jpg"></a>
         <input type="text" id="logo_text">
         <a href="result.html"><button class="btn btn-success btn-md"><i class="fas fa-search"></i></button></a>
     </div>
