--- a/html/result.html
+++ b/html/result.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 <head>
     <title>멀티서치 & 승률예측</title>
-    <link rel="stylesheet" href="result.css">
     <script src="https://kit.fontawesome.com/728d2b8135.js"></script>
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="../css/result.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
 </head>
 <body>
     <div class="container" id="logo">
-        <a href="index.html"><img src="logo.jpg"></a>
+        <a href="index.html"><img src="../img/logo.jpg"></a>
         <input type="text" id="logo_text">
         <a href="result.html"><button class="btn btn-success btn-md"><i class="fas fa-search"></i></button></a>
     </div>
